<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ScrollView01"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".DataActivity" >

        <TextView
            android:id="@+id/textView_mortgage_capital"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="0dp"
            android:text="@string/mortgage_capital" />

        <EditText
            android:id="@+id/editText_mortgage_capital"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView_mortgage_capital"
            android:layout_centerHorizontal="true"
            android:ems="10"
            android:inputType="numberDecimal" >
        </EditText>

        <TextView
            android:id="@+id/textView_annual_interest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editText_mortgage_capital"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="20dp"
            android:text="@string/annual_interest" />

        <EditText
            android:id="@+id/editText_annual_interest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView_annual_interest"
            android:layout_centerHorizontal="true"
            android:ems="10"
            android:inputType="numberDecimal" />

        <TextView
            android:id="@+id/TextView_monthly_fee_good"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/periodLayout"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="30dp"
            android:text="@string/monthly_fee_good"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/TextView_monthly_fee_bad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/TextView_monthly_fee_good"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/monthly_fee_bad" />

        <TextView
            android:id="@+id/TextView_interest_bad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/TextView_monthly_fee_bad"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/interest_bad" />

        <TextView
            android:id="@+id/TextView_payment_more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/TextView_interest_bad"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/payment_more" />

        <TextView
            android:id="@+id/TextView_payment_more_lending"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/TextView_payment_more"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/payment_more_lending" />

        <Button
            android:id="@+id/button_see_amortization_tables"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/TextView_payment_more_lending"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="20dp"
            android:text="@string/see_amortization_tables" />

        <Button
            android:id="@+id/button_why_important"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/button_see_amortization_tables"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="20dp"
            android:text="@string/title_activity_important" />

        <TableLayout
            android:id="@+id/periodLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView_annual_interest"
            android:layout_marginTop="60dp"
            android:stretchColumns="1,3" >

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".50"
                    android:orientation="vertical" >

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/years" />

                    <TableLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:stretchColumns="*" >

                        <TableRow>

                            <EditText
                                android:id="@+id/editText_years"
                                android:layout_width="5sp"
                                android:layout_height="40dp"
                                android:layout_marginTop="1dip"
                                android:gravity="center"
                                android:inputType="number" />
                        </TableRow>
                    </TableLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".50"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/TextView_months"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/months" />

                    <TableLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:stretchColumns="*" >

                        <TableRow>

                            <Button
                                android:id="@+id/buttonMonthPlusMinus"
                                android:layout_width="30sp"
                                android:layout_height="40dip"
                                android:text="  -  "
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/editText_months"
                                android:layout_width="30sp"
                                android:layout_height="40dip"
                                android:layout_marginTop="1dip"
                                android:gravity="center"
                                android:text="0" />

                            <Button
                                android:id="@+id/buttonMonthPlus"
                                android:layout_width="30sp"
                                android:layout_height="40dip"
                                android:text="  +  "
                                android:textStyle="bold" />
                        </TableRow>
                    </TableLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >
                </LinearLayout>
            </TableRow>
        </TableLayout>
    </RelativeLayout>

</ScrollView>